--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello World</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 20px;
+      max-width: 600px; /* Set the maximum width */
+      height: 300px; /* Set a fixed height if necessary */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0; /* Optional background color */
+    }
+
+    h1 {
+      font-size: 24px; /* Adjust font size */
+    }
+  </style>
+</head>
+<body>
   <h1>Hello World</h1>
+</body>
 </html>
